--- a/.gitignore
+++ b/.gitignore
@@ -79,5 +79,19 @@ project/plugins/project/
 *.class
 *.log
 
-
 # End of https://www.gitignore.io/api/sbt,scala,intellij+all
+
+# Created by https://www.gitignore.io/api/terraform
+
+### Terraform ###
+# Compiled files
+*.tfstate
+*.tfstate.backup
+
+# Module directory
+.terraform/
+
+### Terraform Patch ###
+*.tfvars
+
+# End of https://www.gitignore.io/api/terraform
